google analytics tag

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,16 @@
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXD47T2SX9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZXD47T2SX9');
+    </script>
     
     <title>Model Evaluation Practise</title>
   </head>
